log/build_2024-09-29_22-40-23/tb_control/stderr.log
  File "/home/kyle/testWS/install/tb_control/lib/python3.8/site-packages/tb_control/tb_openLoop.py", line 110
    break
    ^
SyntaxError: 'break' outside loop

